refactor magic string
